// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Images renders correctly 1`] = `
<div>
  <div
    className="images"
  >
    <div
      data-index={0}
      name="test1.jpg"
    >
      <div>
        <div
          className="loader"
          style={
            Object {
              "margin": "0 auto",
            }
          }
        >
          Loading...
        </div>
        <div
          className="image"
        >
          <a
            aria-hidden="true"
            className="anchor"
            href="#test1.jpg"
            onClick={[Function]}
          >
            <picture>
              <img
                alt="test1.jpg"
                className="image1"
                onLoad={[Function]}
                src="/test1.jpg"
                title="image"
              />
            </picture>
          </a>
          <div
            className="expand"
          >
            <span>
              test1
            </span>
            <img
              alt="thumb"
              className="image2"
              src="/test1_thumb.jpg"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      data-index={1}
      name="test2.jpg"
    >
      <div>
        <div
          className="image"
        >
          <a
            aria-hidden="true"
            className="anchor"
            href="#test2.jpg"
            onClick={[Function]}
          >
            <picture>
              <img
                alt="test2.jpg"
                className="image1"
                onLoad={[Function]}
                title="image"
              />
            </picture>
          </a>
          <div
            className="expand"
          >
            <span>
              test2
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="back-to-top"
    onClick={[Function]}
  >
    <i
      aria-hidden="true"
      className="fa fa-step-forward fa-lg"
    />
  </div>
  <div
    className="back-to-top test"
  >
    0
  </div>
</div>
`;

exports[`Images renders correctly after first image loaded 1`] = `
<Images
  hash=""
  list={
    Array [
      Object {
        "fileName": "test1.jpg",
        "text": "test1",
        "thumbUrl": "/test1_thumb.jpg",
        "toLoad": true,
        "url": "/test1.jpg",
      },
      Object {
        "fileName": "test2.jpg",
        "text": "test2",
        "thumbUrl": "/test2_thumb.jpg",
        "toLoad": false,
        "url": "/test2.jpg",
      },
    ]
  }
  workOnClick={[MockFunction]}
  workOnLoad={
    [MockFunction] {
      "calls": Array [
        Array [
          "load",
          Object {
            "element": <img
              alt="test1.jpg"
              class="image1"
              src="/test1.jpg"
              title="image"
            />,
            "index": 0,
          },
        ],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": undefined,
        },
      ],
    }
  }
>
  <div>
    <div
      className="images"
    >
      <Element
        data-index={0}
        key="test1.jpg"
        name="test1.jpg"
      >
        <ElementWrapper
          data-index={0}
          name="test1.jpg"
          parentBindings={
            Object {
              "domNode": <div
                data-index="0"
                name="test1.jpg"
              >
                <div>
                  <div
                    class="image show"
                  >
                    <a
                      aria-hidden="true"
                      class="anchor"
                      href="#test1.jpg"
                    >
                      <picture>
                        <img
                          alt="test1.jpg"
                          class="image1"
                          src="/test1.jpg"
                          title="image"
                        />
                      </picture>
                    </a>
                    <div
                      class="expand"
                    >
                      <span>
                        test1
                      </span>
                      <img
                        alt="thumb"
                        class="image2"
                        src="/test1_thumb.jpg"
                      />
                    </div>
                  </div>
                </div>
              </div>,
            }
          }
        >
          <div
            data-index={0}
            name="test1.jpg"
          >
            <Image
              imagesOnClick={[Function]}
              imagesOnLoad={[Function]}
              index={0}
              item={
                Object {
                  "fileName": "test1.jpg",
                  "text": "test1",
                  "thumbUrl": "/test1_thumb.jpg",
                  "toLoad": true,
                  "url": "/test1.jpg",
                }
              }
            >
              <div>
                <div
                  className="image show"
                >
                  <a
                    aria-hidden="true"
                    className="anchor"
                    href="#test1.jpg"
                    onClick={[Function]}
                  >
                    <picture>
                      <img
                        alt="test1.jpg"
                        className="image1"
                        onLoad={[Function]}
                        src="/test1.jpg"
                        title="image"
                      />
                    </picture>
                  </a>
                  <div
                    className="expand"
                  >
                    <span>
                      test1
                    </span>
                    <img
                      alt="thumb"
                      className="image2"
                      src="/test1_thumb.jpg"
                    />
                  </div>
                </div>
              </div>
            </Image>
          </div>
        </ElementWrapper>
      </Element>
      <Element
        data-index={1}
        key="test2.jpg"
        name="test2.jpg"
      >
        <ElementWrapper
          data-index={1}
          name="test2.jpg"
          parentBindings={
            Object {
              "domNode": <div
                data-index="1"
                name="test2.jpg"
              >
                <div>
                  <div
                    class="image"
                  >
                    <a
                      aria-hidden="true"
                      class="anchor"
                      href="#test2.jpg"
                    >
                      <picture>
                        <img
                          alt="test2.jpg"
                          class="image1"
                          title="image"
                        />
                      </picture>
                    </a>
                    <div
                      class="expand"
                    >
                      <span>
                        test2
                      </span>
                    </div>
                  </div>
                </div>
              </div>,
            }
          }
        >
          <div
            data-index={1}
            name="test2.jpg"
          >
            <Image
              imagesOnClick={[Function]}
              imagesOnLoad={[Function]}
              index={1}
              item={
                Object {
                  "fileName": "test2.jpg",
                  "text": "test2",
                  "thumbUrl": "/test2_thumb.jpg",
                  "toLoad": false,
                  "url": "/test2.jpg",
                }
              }
            >
              <div>
                <div
                  className="image"
                >
                  <a
                    aria-hidden="true"
                    className="anchor"
                    href="#test2.jpg"
                    onClick={[Function]}
                  >
                    <picture>
                      <img
                        alt="test2.jpg"
                        className="image1"
                        onLoad={[Function]}
                        title="image"
                      />
                    </picture>
                  </a>
                  <div
                    className="expand"
                  >
                    <span>
                      test2
                    </span>
                  </div>
                </div>
              </div>
            </Image>
          </div>
        </ElementWrapper>
      </Element>
    </div>
    <div
      className="back-to-top"
      onClick={[Function]}
    >
      <i
        aria-hidden="true"
        className="fa fa-step-forward fa-lg"
      />
    </div>
    <div
      className="back-to-top test"
    >
      0
    </div>
  </div>
</Images>
`;
